- Fixed bug #54269 (Short exception message buffer causes crash)