ext/interbase/php_ibase_includes.h
@@ -51,7 +51,7 @@ extern int le_link, le_plink, le_trans;
 #define LE_PLINK "Firebird/InterBase persistent link"
 #define LE_TRANS "Firebird/InterBase transaction"
 
-#define IBASE_MSGSIZE 256
+#define IBASE_MSGSIZE 512
 #define MAX_ERRMSG (IBASE_MSGSIZE*2)
 
 #define IB_DEF_DATE_FMT "%Y-%m-%d"
